tests/NormalTests/paczka1/small_fuzzy/51584137.err
Error in line 11: PVvv S70 56,4
Error in line 12: PVvv A187 7,3
